--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,22 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
 
-body {
+/* body {
   font-family: 'Roboto', sans-serif;
   font-size: 1rem;
   line-height: 1.6;
   background-color: #fff;
   color: #333;
-}
+  margin-left: 5%;
+} */
 .icon {
   width: 15px;
   height: 15px;
 }
-.controls{
+/* .controls{
   display:flex;
   justify-content: space-around;
-}
+} */
 .search-form{
   background: white;
   color: #333;
@@ -23,7 +24,7 @@ body {
   font-size: 1rem;
   border: blueviolet solid 1px ;
 }
-.btn {
+/* .btn {
   display: inline-block;
   background: white;
   color: #333;
@@ -36,28 +37,30 @@ body {
 }
 .btn:hover {
   background-color: skyblue;
-}
+} */
 
-.grid-2 {
+/* .grid-2 {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 2rem;
-}
+} */
 
-.albums {
+/* .albums {
   display: flex;
   align-content: space-around;
   justify-content: flex-start;
   
 
-}
+} */
 
-.content {
+/* .content {
   height: 100vh;
   overflow: auto;
   padding: 20px;
+  margin-top:30%;
   margin-left: 10%;
   margin-right: 20px;
   padding-bottom: 30px;
+  background-color: palegoldenrod;
   
-}
+} */
