add favorite functionality

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
   margin-left: 5%;
 } */
 .icon {
+  padding:0 2% 0 5%;
   width: 15px;
   height: 15px;
 }
@@ -17,13 +18,7 @@
   display:flex;
   justify-content: space-around;
 } */
-.search-form{
-  background: white;
-  color: #333;
-  padding: 0.4rem 1.3rem;
-  font-size: 1rem;
-  border: blueviolet solid 1px ;
-}
+
 /* .btn {
   display: inline-block;
   background: white;
